--- a/src/org/gui/pp/ARXMain.form
+++ b/src/org/gui/pp/ARXMain.form
@@ -133,14 +133,6 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="bcf09" class="javax.swing.JTable" binding="table3" default-binding="true">
-                        <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                            <preferred-size width="150" height="50"/>
-                          </grid>
-                        </constraints>
-                        <properties/>
-                      </component>
                       <component id="33340" class="javax.swing.JButton" binding="addColumnButton" default-binding="true">
                         <constraints>
                           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -149,6 +141,19 @@
                           <text value="Add Column"/>
                         </properties>
                       </component>
+                      <scrollpane id="9ca08">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="bcf09" class="javax.swing.JTable" binding="table3" default-binding="true">
+                            <constraints/>
+                            <properties/>
+                          </component>
+                        </children>
+                      </scrollpane>
                     </children>
                   </grid>
                 </children>
