--- a/src/org/gui/pp/ARXMain.form
+++ b/src/org/gui/pp/ARXMain.form
@@ -170,12 +170,12 @@
                               <text value="Browse for a .csv file"/>
                             </properties>
                           </component>
-                          <component id="e5510" class="javax.swing.JButton" binding="submitButton" default-binding="true">
+                          <component id="e5510" class="javax.swing.JButton" binding="anonymizeButton" default-binding="true">
                             <constraints>
                               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Submit"/>
+                              <text value="Anonymize"/>
                             </properties>
                           </component>
                         </children>
@@ -185,6 +185,15 @@
                 </children>
               </splitpane>
             </children>
+          </grid>
+          <grid id="13610" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Anonymize"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children/>
           </grid>
         </children>
       </tabbedpane>
