--- a/src/org/gui/pp/ARXMain.form
+++ b/src/org/gui/pp/ARXMain.form
@@ -3,9 +3,12 @@
   <grid id="27dc6" binding="arxMain" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="1000" height="1000"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="1000" height="1000"/>
+      <preferredSize width="1000" height="1000"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="df6de" class="javax.swing.JLabel">
@@ -27,7 +30,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="4a30e" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="4a30e" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Get Data Source"/>
@@ -45,7 +48,7 @@
               </component>
               <component id="63657" class="javax.swing.JButton" binding="browseButton" default-binding="true">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Browse"/>
@@ -53,7 +56,7 @@
               </component>
               <scrollpane id="963b">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -64,6 +67,17 @@
                   </component>
                 </children>
               </scrollpane>
+              <component id="dc890" class="javax.swing.JComboBox" binding="delimiterBox">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <model>
+                    <item value=";"/>
+                    <item value=","/>
+                  </model>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="80b08" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
