--- a/src/org/gui/pp/ARXMain.form
+++ b/src/org/gui/pp/ARXMain.form
@@ -529,7 +529,7 @@
                       <splitpane position="left"/>
                     </constraints>
                     <properties/>
-                    <border type="none"/>
+                    <border type="none" title="Before Anonymization"/>
                     <children>
                       <component id="4d39d" class="javax.swing.JTable" binding="oldTable">
                         <constraints/>
@@ -542,7 +542,7 @@
                       <splitpane position="right"/>
                     </constraints>
                     <properties/>
-                    <border type="none"/>
+                    <border type="none" title="After Anonymization"/>
                     <children>
                       <component id="75807" class="javax.swing.JTable" binding="resultTable">
                         <constraints/>
