--- a/src/org/gui/pp/ARXMain.form
+++ b/src/org/gui/pp/ARXMain.form
@@ -287,6 +287,7 @@
                               <minorTickSpacing value="1"/>
                               <paintLabels value="true"/>
                               <paintTicks value="true"/>
+                              <snapToTicks value="true"/>
                               <value value="2"/>
                             </properties>
                           </component>
@@ -342,6 +343,7 @@
                               <maximum value="10"/>
                               <paintLabels value="true"/>
                               <paintTicks value="true"/>
+                              <snapToTicks value="true"/>
                               <value value="5"/>
                             </properties>
                           </component>
@@ -362,6 +364,7 @@
                               <minorTickSpacing value="1"/>
                               <paintLabels value="true"/>
                               <paintTicks value="true"/>
+                              <snapToTicks value="true"/>
                               <value value="10"/>
                             </properties>
                           </component>
@@ -591,16 +594,6 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="824f4" class="javax.swing.JTextField" binding="minInfoLossScore">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <editable value="false"/>
-                </properties>
-              </component>
               <component id="f767c" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -633,6 +626,16 @@
                 </constraints>
                 <properties>
                   <text value="Export to CSV"/>
+                </properties>
+              </component>
+              <component id="824f4" class="javax.swing.JTextField" binding="minInfoLossScore">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <editable value="false"/>
                 </properties>
               </component>
             </children>
