Compare window updations

--- a/src/org/gui/pp/ARXMain.form
+++ b/src/org/gui/pp/ARXMain.form
@@ -75,6 +75,7 @@
                   <model>
                     <item value=";"/>
                     <item value=","/>
+                    <item value="|"/>
                   </model>
                 </properties>
               </component>
